--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,13 @@
   padding: 0;
   text-decoration: none;
   list-style-type: none;
+  box-sizing: border-box;
 }
 
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 img {
@@ -95,7 +97,7 @@ button {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   align-items: end;
   gap: 1rem;
-  padding: 5rem 2rem 2rem 2rem;
+  padding: 5rem 2rem 0 2rem;
 }
 
 .images > :nth-child(1) {
@@ -141,3 +143,87 @@ button {
   right: 0;
   bottom: -80px;
 }
+
+.text {
+  margin-top: 90px;
+  color: var(--main-black);
+   
+  h2 {
+   font-size: 56px;
+   font-weight: 400;
+   font-family: "Bebas Neue", sans-serif;
+   padding-bottom: 2rem;
+  }
+
+  p {
+    font-size: 18px;
+    font-weight: 400;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    padding-bottom: 2rem;
+  }
+}
+
+.collection_img {
+   display: flex;
+   gap: 2rem;
+
+   img {
+    width: 400px;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    margin: 0 auto;
+   }
+}
+
+.texts p {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-size: 46px;
+  
+
+  &:nth-child(1) {
+    position: relative;
+    top: -70px;
+    left: 100px;
+  }
+
+  &:nth-child(2) {
+    position: relative;
+    right: -720px;
+    bottom: 160px;
+  }
+
+}
+
+hr {
+  height: 1px;
+  background-color: #504C48;
+  border: none;
+}
+
+.one {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.image-container {
+  font-weight: 600;
+  font-family: "Plus Jakarta Sans", sans-serif;
+
+  & img {
+    padding-bottom: 1rem;
+  }
+}
+
+.image-container span {
+  float: right;
+  background-color: #FFF0E3;
+  padding: 5px;
+  border-radius: 50%;
+  position: relative;
+  top: -20px;
+}
+
