--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* font-family: "Bebas Neue", sans-serif; */
-/* font-family: "Plus Jakarta Sans", sans-serif; */
 :root {
   --main-black: #1E1C1A;
   --plain-white: #fff;
@@ -384,7 +382,7 @@ footer {
 
 /* Responsive styles for mobile devices */
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .nav li {
     display: none;
   }
@@ -528,7 +526,9 @@ footer {
   gap: 1rem;
 }
 
-
+button {
+  width: 100%;
+}
 
 }
 
